Yaml docs for users added and errors handling modified in users.js
