# server/users.js
@@ -26,6 +26,7 @@ router.get("/users", checkAdmin, async (req, res) => {
         const records = await sequelize.query("SELECT * FROM usuarios", { type: sequelize.QueryTypes.SELECT })
         res.status(200).json(records);
     } catch (error) {
+        res.status(400).json(`Error message: ${error}`)
         console.error(error);
     }      
   });
@@ -43,11 +44,11 @@ router.get("/users/:id", checkAdmin, async (req, res) => {
                 // records !== [] ? res.status(200).json(records) : res.status(404);
             } catch (error) {
                 console.error(error);
-                res.status(404);
+                res.status(400).json(`Error message: ${error}` );
             }   
         } 
 })
-router.post("/login", verifyUser, async (req, res) => {
+router.post("/users/login", verifyUser, async (req, res) => {
     const email = req.body.email;
     try {
         const data = await sequelize.query("SELECT * FROM usuarios WHERE email = ?", {replacements: [req.body.email], type: sequelize.QueryTypes.SELECT,})
@@ -64,15 +65,14 @@ router.post("/login", verifyUser, async (req, res) => {
             id: id
         }
         const token = jwt.sign({payload}, jwtKey, { expiresIn: "1h" });
-        res.status(200).json({
-            token
-        });
+        res.status(200).json({Message: `You're welcome ${username}`, Token: token});
         console.log(token);
     } catch (error) {
+        res.status(400).json("Error message: " + error);
         console.error(error);
     }
 });
-router.post("/signup", existingUser, async (req, res) => {
+router.post("/users/signup", existingUser, async (req, res) => {
     const { name, email, password, direction } = req.body;
     try {
         if (name && email && password && direction) {
@@ -82,13 +82,14 @@ router.post("/signup", existingUser, async (req, res) => {
             )
             res.status(200).json("User added");
         } else {
-            res.status(400);
+            res.status(400).json("Error message: You need to insert the data required" );
         }
     } catch (error) {
+        res.status(400).json("Error message: " + error)
         console.error(error);
     }
 });
-router.put("/modifyuser", verifyUser, async(req, res) => {
+router.put("/users", verifyUser, async(req, res) => {
     if(req.user.payload.role == 1 ) {
         //Admins can make changes over any user by providing an email
         const { name, email, password, direction, admin } = req.body;
@@ -102,7 +103,7 @@ router.put("/modifyuser", verifyUser, async(req, res) => {
             res.status(200).json(`User updated corrrectly`);
         } catch (error) {
             console.error(error);
-            res.status(400);
+            res.status(400).json("Error " + error);
         }
     } else  {
         const { name, email, password, direction } = req.body;
@@ -116,12 +117,12 @@ router.put("/modifyuser", verifyUser, async(req, res) => {
             res.status(200).json(`User updated corrrectly`);
         } catch (error) {
             console.error(error);
-            res.status(400);
+            res.status(400).json("Error " + error);
         }
     }
     
 })
-router.delete("/deleteuser", verifyUser, async(req, res) => {
+router.delete("/users", verifyUser, async(req, res) => {
     if(req.user.payload.role == 1 ) {
         try {
             //The next const calls the function GETID in order to get the id of the user desired. It will use the email to make the query and find the id.
@@ -133,7 +134,7 @@ router.delete("/deleteuser", verifyUser, async(req, res) => {
             res.status(200).json("User removed");
         } catch (error) {
             console.error(error);
-            res.status(400);
+            res.status(400).json("Error: " + error);
         }
     } else {
         try {
